--- a/Boatcontent/Documents.qmd
+++ b/Boatcontent/Documents.qmd
@@ -20,14 +20,15 @@ See individual boat pages for completed copies
 
 ##  Daily Forms
 -   [Float Plan](https://drive.google.com/file/d/1EBD5xQRL1HT2YWSQelvDUFBwDlnlT9RU/view?usp=share_link){.external target="_blank"}
--   [GAR Risk Assessment](https://drive.google.com/file/d/1EBD5xQRL1HT2YWSQelvDUFBwDlnlT9RU/view?usp=share_link){.external target="_blank"}
--   [Safety Briefing](https://drive.google.com/file/d/1EBD5xQRL1HT2YWSQelvDUFBwDlnlT9RU/view?usp=share_link){.external target="_blank"}
+-   [GAR](https://drive.google.com/file/d/1xHnvcDfjmqOaOhX6xd-TcYxXCmRafCae/view){.external target="_blank"}
+-   [Safety Briefing](https://drive.google.com/file/d/1XgZKFtY692sj5ckLOVPa2uvD8HqrazxC/view?usp=sharing){.external target="_blank"}
 
 ##  Placards
 -   All motorized small boats must have a sign or placard, prohibiting the discharge of oil or oily waste per 33 CFR 155.450. These signs can be purchased at most marine supply stores.
 -   All motorized small boats must have a sign or placard, listing regulations for discharging garbage per Annex V of MARPOL. These signs can be purchased at most marine supply stores.
 
-
-
+##  Kayaks
+-   [Kayak Start Up Checklist](https://docs.google.com/document/d/1OQ-5hbsjefVWnxRmNOGre26sSFG0YXzScgbAskmgY4w/edit?usp=drive_link)
+-   [Kayak Shutdown Checklist](https://docs.google.com/document/d/18ITk3ieefQ92AHqtWqoYMZlpYDR2mE-8ATOIA-falhw/edit?usp=drive_link)
 
 
