--- a/Boatcontent/Training.qmd
+++ b/Boatcontent/Training.qmd
@@ -5,7 +5,7 @@ format: html
 
 ## Certification Status
 
-<iframe width="900" height="400" src="https://docs.google.com/spreadsheets/d/1gJ5pC-AN7arpvw6b22mn3KIFUN18pQW-/edit?usp=sharing&amp;ouid=111160936144270501572&amp;rtpof=true&amp;sd=true;headers=false">
+<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1gJ5pC-AN7arpvw6b22mn3KIFUN18pQW-/edit?usp=sharing&amp;ouid=111160936144270501572&amp;rtpof=true&amp;sd=true;headers=false">
 
 </iframe>
 
@@ -20,3 +20,5 @@ format: html
 -   NOAA Component
 -   Open Water Module (OWM)
 -   PQS on camp boats
+
+[NOAA Small Boat Operator and Crewmember Authorization Form](https://drive.google.com/file/d/1n1N9PW5Lz-wty3Gp1lS4d1IqKs_GVk3g/view?usp=sharing){.external target="_blank"}
